Add stored_data route
